my first commit

--- a/tut1.html
+++ b/tut1.html
@@ -13,10 +13,10 @@
             <img class="logo" src="C:\Users\icyspicy\Downloads\oie_jpg (1).png" alt="logo">
         </div>
     <div class="navbar-right">
-        <a class="a-element" href="home"> Home </a>
+        <a class="a-element" href="#home"> Home </a>
         <a class="a-element" href="#ser"> services </a>
-        <a class="a-element" href="con"> contact </a>
-        <a class="a-element" href="tst"> Testimonials</a> 
+        <a class="a-element" href="#con"> contact </a>
+        <a class="a-element" href="#tst"> Testimonials</a> 
     </div>
 </div>
 <div class="container" id="home">
@@ -26,7 +26,7 @@
             In my quest to become a versatile coder, I have already successfully crafted two portfolio websites using HTML and CSS, reflecting my commitment to mastering the fundamentals of web development. These projects not only exhibit my proficiency in front-end technologies but also underscore my keen eye for design and user experience.</p>
     </div>
     <div class="container-right">
-      <img src="https://res.cloudinary.com/dfqc3n2we/image/upload/w_1000,c_fill,ar_1:1,g_auto,r_max,bo_5px_solid_red,b_rgb:262c35/v1704273966/IMG_20240103_145025_qhtrta.jpg" width="300" height="300" alt="my-logo">
+      <img src="https://res.cloudinary.com/dfqc3n2we/image/upload/w_1000,c_fill,ar_1:1,g_auto,r_max,bo_5px_solid_red,b_rgb:262c35/v1704273966/IMG_20240103_145025_qhtrta.jpg" alt="my-logo" class="img">
     </div>
 </div>
 <div class="services" id="ser">
